horiz scrollbar solve

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav {
     right: 3vw;
     height: var(--player-height);
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     box-shadow: 2px 2px 3px 1px rgb(63, 52, 52);
     font-family: sans-serif;
     font-size: 17px;
@@ -796,7 +796,7 @@ nav {
         background:  linear-gradient(160deg,rgb(193, 189, 90),30%, gray);      
     }
     .icons{
-        width: 71px;
+        width: 65px;
     }
     #prev{
         display: none;
@@ -855,6 +855,17 @@ nav {
     .covertitle {
         font-size: 24px;
     }
+    .play_bigG {
+        width: 60px;
+        height: 34px;
+        line-height: 32px;
+    }
+    
+    .play_bigG:hover {
+        width: 63px;
+        height: 35px;
+        font-weight: 600;
+    }
     .play_bigB {
         display: none;
     }
@@ -896,22 +907,21 @@ nav {
         width: 13vw;
     }
 }
-@media only screen and (max-width:395px) {
-    #searchBox{
-        width: 87px;
-    }
+@media only screen and (max-width:420px) {
     .cover{
         margin: 10px 20px 15px 20px;
     }
+    .coverlabel {
+        margin: 15px 0 0 25px;
+    }
     #login{
-        max-width: 95px;
+        max-width: 90px;
         overflow: hidden;
-        box-sizing: border-box;
+        margin: 0px 2px;
     }
     .covertitle {
-        font-size: 23.5px;
-        font-weight: 600;
-        color: white;
+        font-size: 23px;
+        margin-right: 15px;
     }
     .play_bigB {
         display: none;
